convert/objects/Review__c.object
<CustomObject>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <formula>Job_Application__r.Candidate__r.First_Name__c</formula>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Job_Application__r.Id , Job_Application__r.Candidate__r.First_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Job_Application__r.Position__r.Name</formula>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Job_Application__r.Position__r.Id  , Job_Application__r.Position__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Enter a 1-5 rating of the candidate</inlineHelpText>
        <label>Rating</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Rating_must_be_between_1_to_5</fullName>
        <active>true</active>
        <errorConditionFormula>Rating__c &lt;1  ||  Rating__c&gt;5</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Rating must be between 1 to 5</errorMessage>
    </validationRules>
</CustomObject>